correction écriture des couleurs pour s'aligner avec ::root

--- a/css/style.css
+++ b/css/style.css
@@ -98,12 +98,12 @@ header {
     left: 0;
     width: 100%;
     height: 2px;
-    background-color: #0065fc;
+    background-color: var(--main-color);
     opacity: 0;
 }
 
 .menu-item:hover {
-    color: #0065fc;
+    color: var(--main-color);
 }
 
 .menu-item:hover::before {
@@ -134,15 +134,15 @@ h1 {
     margin-top: 15px;
     display: inline-flex;
     align-items: stretch; /*pour bien s'étirer sur la hauteur*/
-    background-color: #f2f2f2; /* zone de l'icône */
+    background-color: var(--main-bg-color); /* zone de l'icône */
     border-radius: 15px;       
     overflow: hidden;          /* Pour que le bouton ne dépasse pas des arrondis */
-    border: 1px solid #f2f2f2;
+    border: 1px solid var(--main-bg-color);
 }
 
 .icon-container {
     padding: 15px 18px;
-    color: #000;
+    color: black;
 }
 
 .search-input {
@@ -156,12 +156,12 @@ h1 {
 }
 
 .search-input::placeholder {  /* :: -> pour Pseudo-éléments*/
-    color: #000000;
+    color: black;
     opacity: 1; /* pour firefox qui baisse l'opacité par défaut */
 }
 .search-button {
     border: none;
-    background-color: #0065FC;
+    background-color: var(--main-color);
     padding: 0px 5px;
 }
 
@@ -215,13 +215,13 @@ h1 {
 }
 
 .filter-button:hover {
-    background: #DEEBFF; 
+    background: var(--filter-bg-color); 
     border-color: #d9d9d9;
     cursor: pointer;
 }
 
 .filter-button i {
-    color: #0065FC; 
+    color: var(--main-color); 
     font-size: 20px;
 }
 
@@ -238,7 +238,7 @@ h1 {
 }
 
 .info-icon {
-    color: #0065FC; 
+    color: var(--main-color); 
     border-radius: 50%; /* forme ronde */
     border: 1px solid #d9d9d9;
     width: 24px;
@@ -250,7 +250,7 @@ h1 {
 }
 
 .info-text {
-    color: #000000; 
+    color: black; 
 }
 
 /****** Hebergements And Populaires donné de base  ***********/
@@ -423,7 +423,7 @@ h1 {
 
 .footer {
     display: flex;           
-    background-color: #f2f2f2;         
+    background-color: var(--main-bg-color);         
     gap: 240px;       /* espace entre les colonnes */
     padding: 5px 20px 20px 20px;
 
@@ -597,7 +597,7 @@ h1 {
     }
 
     .search-button {
-        background-color: #0065FC; 
+        background-color: var(--main-color); 
         color: white;
         border: none;
         padding: 15px 16px;
@@ -634,7 +634,7 @@ h1 {
         border-radius: 0px
     }
     .populaires {
-        background-color: #F2F2F2;
+        background-color: var(--main-bg-color);
         order: 1;
         margin: 0px;
     }
